# ai-ops

./: .gitignore  CLAUDE.md  HANDOFF.md  README.md  pyproject.toml
.claude/: settings.local.json
.claude/skills/add-to-registry/: SKILL.md
.claude/skills/review-run/: SKILL.md
.claude/skills/run-task/: SKILL.md
.claude/skills/scaffold-agent/: SKILL.md
.claude/skills/smoke/: SKILL.md
agents/browser-operator/: README.md
agents/builder/: agent.md  policy.md  prompt.md  tools.yaml
agents/comms/: README.md
agents/dispatcher/: agent.md  policy.md  prompt.md  tools.yaml
agents/knowledge/: README.md
agents/ops-integration/: README.md
agents/research/: agent.md  policy.md  prompt.md  tools.yaml
agents/reviewer/: agent.md  policy.md  prompt.md  tools.yaml
docs/: agent-map.md  architecture.md  onboarding.md  run-lifecycle.md  vision.md
integrations/mcp/: README.md  config.yaml
integrations/n8n/: README.md  config.yaml
memory/: memory-model.md
policies/: approval-matrix.yaml  data-handling.yaml  escalation-rules.yaml  naming-conventions.yaml  security-rules.yaml
scripts/: bootstrap.ps1  create-worktree.ps1  lint.ps1  run-tests.ps1
skills/: registry.yaml
src/ai_ops/: __init__.py  cli.py
src/ai_ops/agents/: __init__.py  base.py  builder.py  dispatcher.py  research.py  reviewer.py
templates/: implementation-plan.md  postmortem.md  research-report.md  review-report.md  task-brief.md
tests/: test_agents.py  test_approval.py  test_cli.py  test_llm_client.py  test_persistence.py  test_pipeline.py
workflows/temporal/: README.md
(+14 files in other folders)
